@@ -1,0 +1,48 @@
+<?xml version="1.0"?>
+<!DOCTYPE sect2 PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
+                  "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
+<!ENTITY urlfiguresbase "figures/">
+<!ENTITY version "2.4">
+]>
+<sect2 id="rngames">
+  <title>Games</title>
+  <para>GNOME helps you achieve your goals, but sometimes your goal is to be distracted. That's when the GNOME games bring the fun.</para>
+
+  <sect3 id="rngames-samegnome">
+  <title>Same GNOME</title>
+
+  <para>The Same GNOME game has a major new version, with better graphics, extra board sizes, and an undo feature in case you change your mind.</para>
+    
+    <figure id="rnscreenshot-game-samegnome">
+    <title>Same GNOME</title>
+      <screenshot>
+        <mediaobject>
+          <imageobject><imagedata fileref="&urlfiguresbase;figure-game-same-gnome.png" format="PNG"/>
+          </imageobject>
+        <textobject><phrase>The Same GNOME game.</phrase></textobject>
+      </mediaobject>
+    </screenshot>
+  </figure>
+
+  </sect3>
+
+
+  <sect3 id="rngames-nibbles">
+  <title>Nibbles</title>
+
+  <para>Our &quot;Just Works&quot; philosophy is even visible in the Nibbles game. Now you can browse your local network for other people to play against, via the same zero-configuration technique used by Gnome Meeting.</para>
+    
+    <figure id="rnscreenshot-game-samegnome">
+    <title>Same GNOME</title>
+      <screenshot>
+        <mediaobject>
+          <imageobject><imagedata fileref="&urlfiguresbase;figure-game-nibbles.png" format="PNG"/>
+          </imageobject>
+        <textobject><phrase>The Same GNOME game.</phrase></textobject>
+      </mediaobject>
+    </screenshot>
+  </figure>
+
+  </sect3>
+
+</sect2>
